--- a/nextflow.config
+++ b/nextflow.config
@@ -8,7 +8,7 @@
  * name here.
  */
 
-process.container = 'beckerlab/methylscore:dev'
+process.container = 'quay.io/beckerlab/methylscore:nextflow-dsl2'
 
 manifest {
     homePage = 'https://github.com/Computomics/MethylScore'
@@ -17,7 +17,7 @@ manifest {
     version = '0.1.16-nf'
     mainScript = 'main.nf'
     defaultBranch = 'nextflow'
-    nextflowVersion = '>=20.07.1'
+    nextflowVersion = '>=20.10.0'
 }
 
 // Default parameters
