--- a/conf/cbe.config
+++ b/conf/cbe.config
@@ -13,10 +13,10 @@ process {
   queue = { task.memory <= 170.GB ? 'c' : 'm' }
   clusterOptions = { task.time <= 8.h ? '--qos short': task.time <= 48.h ? '--qos medium' : '--qos long' }
 
-  withName: GET_CONSENSUS {
-  	cpus = 1
-  	memory = { 16.GB * task.attempt }
-  	time = { 4.h * task.attempt }
+  withName: BUILD {
+  	cpus = 2
+  	memory = { 1.GB * task.attempt }
+  	time = { 12.h * task.attempt }
   }
 
   withName: DEDUP {
@@ -31,28 +31,22 @@ process {
   	time = { 1.h * task.attempt }
   }
 
-  withName: SPLIT_BEDGRAPH {
+  withName: SPLIT {
   	cpus = 1
   	memory = { 4.GB * task.attempt }
   	time = { 2.h * task.attempt }
   }
 
   withName: INDEX {
-  	cpus = 8
-  	memory = { 8.GB * task.attempt }
-  	time = { 16.h * task.attempt }
-  }
-
-  withName: MATRIX {
-  	cpus = 1
-  	memory = { 8.GB * task.attempt }
-  	time = { 16.h * task.attempt }
+  	cpus = 4
+  	memory = { 1.GB * task.attempt }
+  	time = { 1.h * task.attempt }
   }
 
   withName: CALL_MRS {
   	cpus = 1
-  	memory = { 8.GB * task.attempt }
-  	time = { 8.h * task.attempt }
+  	memory = { 4.GB * task.attempt }
+  	time = { 2.h * task.attempt }
   }
 
   withName: MATRIX_TO_IGV {
@@ -63,15 +57,14 @@ process {
 
   withName: SPLIT_MRS {
   	cpus = 1
-  	memory = { 4.GB * task.attempt }
-  	time = { 4.h * task.attempt }
+  	memory = { 256.MB * task.attempt }
+  	time = { 10.min * task.attempt }
   }
 
   withName: CALL_DMRS {
-  	errorStrategy = { task.exitStatus == 25 ? 'ignore' : 'finish' }
   	cpus = 1
-  	memory = { 2.GB * task.attempt }
-  	time = { 1.h * task.attempt }
+  	memory = { 256.MB * task.attempt }
+  	time = { 30.min * task.attempt }
   }
 
   withName: MERGE_DMRS {
