--- a/conf/cbe.config
+++ b/conf/cbe.config
@@ -8,8 +8,12 @@ singularity {
   cacheDir = '/resources/containers'
 }
 
+executor {
+	name = 'slurm'
+	queueSize = 200
+}
+
 process {
-  executor = 'slurm'
   queue = { task.memory <= 170.GB ? 'c' : 'm' }
   clusterOptions = { task.time <= 8.h ? '--qos short': task.time <= 48.h ? '--qos medium' : '--qos long' }
 
@@ -34,7 +38,7 @@ process {
   withName: SPLIT {
   	cpus = 1
   	memory = { 4.GB * task.attempt }
-  	time = { 2.h * task.attempt }
+  	time = { 4.h * task.attempt }
   }
 
   withName: INDEX {
@@ -46,7 +50,7 @@ process {
   withName: CALL_MRS {
   	cpus = 1
   	memory = { 4.GB * task.attempt }
-  	time = { 2.h * task.attempt }
+  	time = { 3.h * task.attempt }
   }
 
   withName: MATRIX_TO_IGV {
@@ -57,19 +61,19 @@ process {
 
   withName: SPLIT_MRS {
   	cpus = 1
-  	memory = { 256.MB * task.attempt }
-  	time = { 10.min * task.attempt }
+  	memory = { 1.GB * task.attempt }
+  	time = { 1.h * task.attempt }
   }
 
   withName: CALL_DMRS {
   	cpus = 1
-  	memory = { 256.MB * task.attempt }
+  	memory = { 1.GB * task.attempt }
   	time = { 30.min * task.attempt }
   }
 
   withName: MERGE_DMRS {
   	cpus = 1
-  	memory = { 128.MB * task.attempt }
+  	memory = { 256.MB * task.attempt }
   	time = { 10.m * task.attempt }
   }
 
