use subworkflows for MR and DMR steps

--- a/conf/base.config
+++ b/conf/base.config
@@ -10,12 +10,12 @@ env {
 
 process {
 
-  withName: BUILD {
+  withName: MATRIX:BUILD {
   	cpus = 2
   	memory = { 4.GB * task.attempt }
   }
 
-  withName: DEDUP {
+  withName: CONSENSUS:DEDUP {
   	cpus = 2
   	memory = { 4.GB * task.attempt }
   }
@@ -25,22 +25,22 @@ process {
   	memory = {512.MB * task.attempt }
   }
 
-  withName: SPLIT {
+  withName: CONSENSUS:SPLIT {
   	cpus = 1
   	memory = { 4.GB * task.attempt }
   }
 
-  withName: INDEX {
+  withName: BUILD_INDEX {
     cpus = 2
   	memory = { 4.GB * task.attempt }
   }
 
-  withName: CALL_MRS {
+  withName: MRS:CALL_MRS {
   	cpus = 2
   	memory = { 4.GB * task.attempt }
   }
 
-  withName: MATRIX_TO_IGV {
+  withName: MRS:IGV {
   	cpus = 1
   	memory = { 256.MB * task.attempt }
   }
