--- a/conf/cbe.config
+++ b/conf/cbe.config
@@ -8,22 +8,24 @@ singularity {
   cacheDir = '/resources/containers'
 }
 
-executor {
-	name = 'slurm'
-	queueSize = 200
-}
-
 process {
+  executor = 'slurm'
   queue = { task.memory <= 170.GB ? 'c' : 'm' }
   clusterOptions = { task.time <= 8.h ? '--qos short': task.time <= 48.h ? '--qos medium' : '--qos long' }
 
-  withName: BUILD {
+  withName: MATRIX:BUILD {
   	cpus = 2
-  	memory = { 1.GB * task.attempt }
+  	memory = { 4.GB * task.attempt }
   	time = { 12.h * task.attempt }
   }
 
-  withName: DEDUP {
+  withName: BUILD_INDEX {
+  	cpus = 4
+  	memory = { 4.GB * task.attempt }
+  	time = { 8.h * task.attempt }
+  }
+
+  withName: CONSENSUS:DEDUP {
   	cpus = 1
   	memory = { 16.GB * task.attempt }
   	time = { 2.h * task.attempt }
@@ -35,25 +37,25 @@ process {
   	time = { 1.h * task.attempt }
   }
 
-  withName: SPLIT {
+  withName: CONSENSUS:SPLIT {
   	cpus = 1
-  	memory = { 4.GB * task.attempt }
-  	time = { 4.h * task.attempt }
-  }
-
-  withName: INDEX {
-  	cpus = 4
   	memory = { 1.GB * task.attempt }
   	time = { 1.h * task.attempt }
   }
 
-  withName: CALL_MRS {
+  withName: SAMPLESHEET:GENERATE {
   	cpus = 1
-  	memory = { 4.GB * task.attempt }
-  	time = { 3.h * task.attempt }
+  	memory = { 128.MB * task.attempt }
+  	time = { 5.min * task.attempt }
   }
 
-  withName: MATRIX_TO_IGV {
+  withName: CALL_MRS {
+  	cpus = 1
+  	memory = { 16.GB * task.attempt }
+  	time = { 8.h * task.attempt }
+  }
+
+  withName: IGV {
   	cpus = 1
   	memory = { 256.MB * task.attempt }
   	time = { 30.m * task.attempt }
@@ -61,14 +63,14 @@ process {
 
   withName: SPLIT_MRS {
   	cpus = 1
-  	memory = { 1.GB * task.attempt }
-  	time = { 1.h * task.attempt }
+  	memory = { 16.GB * task.attempt }
+  	time = { 8.h * task.attempt }
   }
 
   withName: CALL_DMRS {
   	cpus = 1
-  	memory = { 1.GB * task.attempt }
-  	time = { 30.min * task.attempt }
+  	memory = { 512.MB * task.attempt }
+  	time = { 2.h * task.attempt }
   }
 
   withName: MERGE_DMRS {
