--- a/conf/testing.config
+++ b/conf/testing.config
@@ -3,5 +3,5 @@
  * -------------------------------------------------
  */
 
-params.SAMPLE_SHEET = params.BEDGRAPH ? 'https://github.com/Gregor-Mendel-Institute/test-data/raw/MethylScore/samplesheet_bedGraph.tsv' : 'https://github.com/Gregor-Mendel-Institute/test-data/raw/MethylScore/samplesheet.tsv'
+params.SAMPLE_SHEET = 'https://github.com/Gregor-Mendel-Institute/test-data/raw/MethylScore/samplesheet.tsv'
 params.GENOME = 'https://github.com/Gregor-Mendel-Institute/test-data/raw/MethylScore/ref.fasta'
