use unique process names
avoids confusion and allows more fine-grained resource config

TODO: figure out how to get rid of config selector warnings

--- a/conf/base.config
+++ b/conf/base.config
@@ -3,31 +3,40 @@
  * -------------------------------------------------
  */
 
-
 env {
   LC_ALL = "C"
 }
 
 process {
 
-  withName: MATRIX:BUILD {
+  withName: BUILD {
   	cpus = 2
   	memory = { 4.GB * task.attempt }
   }
 
-  withName: CONSENSUS:DEDUP {
+  withName: DEDUPLICATE {
   	cpus = 2
   	memory = { 4.GB * task.attempt }
   }
 
-  withName: STATISTICS {
+  withName: READ_STATISTICS {
   	cpus = 1
   	memory = {512.MB * task.attempt }
   }
 
-  withName: CONSENSUS:SPLIT {
+  withName: SPLIT_BAM {
   	cpus = 1
   	memory = { 4.GB * task.attempt }
+  }
+
+  withName: SPLIT_BEDGRAPH {
+  	cpus = 1
+  	memory = { 2.GB * task.attempt }
+  }
+
+  withName: SPLIT_MATRIX {
+  	cpus = 1
+  	memory = { 2.GB * task.attempt }
   }
 
   withName: BUILD_INDEX {
@@ -35,14 +44,19 @@ process {
   	memory = { 4.GB * task.attempt }
   }
 
-  withName: MRS:CALL_MRS {
-  	cpus = 2
+  withName: CALL_MRS {
+  	cpus = 1
   	memory = { 4.GB * task.attempt }
   }
 
-  withName: MRS:IGV {
+  withName: IGV {
   	cpus = 1
   	memory = { 256.MB * task.attempt }
+  }
+
+  withName: MR_STATISTICS {
+  	cpus = 1
+  	memory = {512.MB * task.attempt }
   }
 
   withName: SPLIT_MRS {
@@ -52,7 +66,7 @@ process {
 
   withName: CALL_DMRS {
   	cpus = 1
-  	memory = { 2.GB * task.attempt }
+  	memory = { 1.GB * task.attempt }
   }
 
   withName: MERGE_DMRS {
