--- a/conf/cbe.config
+++ b/conf/cbe.config
@@ -13,37 +13,55 @@ process {
   queue = { task.memory <= 170.GB ? 'c' : 'm' }
   clusterOptions = { task.time <= 8.h ? '--qos short': task.time <= 48.h ? '--qos medium' : '--qos long' }
 
-  withName: MATRIX:BUILD {
+  withName: BUILD {
   	cpus = 2
   	memory = { 4.GB * task.attempt }
   	time = { 12.h * task.attempt }
   }
 
-  withName: BUILD_INDEX {
+  withName: INDEX {
   	cpus = 4
   	memory = { 4.GB * task.attempt }
   	time = { 8.h * task.attempt }
   }
 
-  withName: CONSENSUS:DEDUP {
+  withName: DEDUPLICATE {
   	cpus = 1
   	memory = { 16.GB * task.attempt }
   	time = { 2.h * task.attempt }
   }
 
-  withName: STATISTICS {
+  withName: READ_STATISTICS {
   	cpus = 1
   	memory = {512.MB * task.attempt }
   	time = { 1.h * task.attempt }
   }
+  
+  withName: MR_STATISTICS {
+  	cpus = 1
+  	memory = {256.MB * task.attempt }
+  	time = { 1.h * task.attempt }
+  }
 
-  withName: CONSENSUS:SPLIT {
+  withName: SPLIT_BAM {
+  	cpus = 1
+  	memory = { 4.GB * task.attempt }
+  	time = { 1.h * task.attempt }
+  }
+
+  withName: SPLIT_BEDGRAPH {
   	cpus = 1
   	memory = { 1.GB * task.attempt }
   	time = { 1.h * task.attempt }
   }
 
-  withName: SAMPLESHEET:GENERATE {
+  withName: SPLIT_MATRIX {
+  	cpus = 1
+  	memory = { 1.GB * task.attempt }
+  	time = { 1.h * task.attempt }
+  }
+
+  withName: GENERATE {
   	cpus = 1
   	memory = { 128.MB * task.attempt }
   	time = { 5.min * task.attempt }
@@ -51,14 +69,14 @@ process {
 
   withName: CALL_MRS {
   	cpus = 1
-  	memory = { 16.GB * task.attempt }
+  	memory = { 8.GB * task.attempt }
   	time = { 8.h * task.attempt }
   }
 
   withName: IGV {
   	cpus = 1
   	memory = { 256.MB * task.attempt }
-  	time = { 30.m * task.attempt }
+  	time = { 1.h * task.attempt }
   }
 
   withName: SPLIT_MRS {
