do not save intermediate files
unless user sets --REMOVE_INTERMED_FILES to false

--- a/example_config.yaml
+++ b/example_config.yaml
@@ -22,6 +22,9 @@ GENOME : false
 # project folder (absolute path)
 PROJECT_FOLDER : "./results"
 
+# Remove intermediate files?
+REMOVE_INTMED_FILES : true
+
 # sample sheet file (absolute path)
 SAMPLE_SHEET : false 
 
