--- a/nextflow.config
+++ b/nextflow.config
@@ -30,6 +30,7 @@ params {
   PAIRWISE = false
   PROJECT_FOLDER = "./results"
   METRICS = true
+  REMOVE_INTMED_FILES = true
 
   HUMAN = false
   ROI = false
