--- a/nextflow.config
+++ b/nextflow.config
@@ -82,6 +82,7 @@ profiles {
   singularity { singularity.enabled = true }
   podman { podman.enabled =  true }
   docker { docker.enabled = true }
+  charliecloud { includeConfig 'conf/charliecloud.config' }
   testing { includeConfig 'conf/testing.config' }
 }
 
