--- a/conf/cbe.config
+++ b/conf/cbe.config
@@ -16,7 +16,7 @@ process {
   withName: BUILD {
   	cpus = 2
   	memory = { 4.GB * task.attempt }
-  	time = { 12.h * task.attempt }
+  	time = { 16.h * task.attempt }
   }
 
   withName: INDEX {
@@ -81,23 +81,25 @@ process {
 
   withName: SPLIT_MRS {
   	cpus = 1
-  	memory = { 16.GB * task.attempt }
+  	memory = { 8.GB * task.attempt }
   	time = { 8.h * task.attempt }
   }
 
   withName: CALL_DMRS {
   	cpus = 1
-  	memory = { 512.MB * task.attempt }
-  	time = { 2.h * task.attempt }
+        errorStrategy = 'retry'
+  	memory = { 6.GB * task.attempt }
+  	time = { 4.h * task.attempt }
   }
 
   withName: MERGE_DMRS {
   	cpus = 1
-  	memory = { 256.MB * task.attempt }
-  	time = { 10.m * task.attempt }
+  	memory = { 512.MB * task.attempt }
+  	time = { 30.m * task.attempt }
   }
 
   errorStrategy = { ( task.exitStatus == 143 || task.exitStatus == 137 ) ? 'retry' : 'finish' }
+  //errorStrategy = 'retry'
   maxRetries = 3
   maxErrors = '-1'
 }
