add modules for comparison of dmr callers
includes methylpy, DSS, dmrseq, methylKit, HOME, metilene in no particular order

--- a/conf/base.config
+++ b/conf/base.config
@@ -74,6 +74,38 @@ process {
   	memory = { 128.MB * task.attempt }
   }
 
+  withName: RUN_DSS {
+    time = { 72.h * task.attempt }
+  	cpus = { 8 * task.attempt }
+  	memory = { 32.GB * task.attempt }
+  	//memory = { 128.GB * task.attempt }
+  }
+  withName: RUN_DMRSEQ {
+    time = { 24.h * task.attempt }
+  	cpus = { 8 * task.attempt }
+  	memory = { 128.GB * task.attempt }
+  }
+  withName: RUN_HOME {
+    time = { 8.h * task.attempt }
+    cpus = { 8 * task.attempt }
+  	memory = { 64.GB * task.attempt }
+  }
+  withName: RUN_DMRFIND {
+    time = { 8.h * task.attempt }
+  	cpus = { 8 * task.attempt }
+  	memory = { 64.GB * task.attempt }
+  }
+  withName: RUN_METILENE {
+    time = { 24.h * task.attempt }
+  	cpus = { 8 * task.attempt }
+  	memory = { 64.GB * task.attempt }
+  }
+  withName: RUN_METHYLKIT {
+    time = { 8.h * task.attempt }
+  	cpus = { 8 * task.attempt }
+  	memory = { 64.GB * task.attempt }
+  }
+
   errorStrategy = { ( task.exitStatus == 143 || task.exitStatus == 137 ) ? 'retry' : 'finish' }
   maxRetries = 3
   maxErrors = '-1'
