add LRZ biohpc_gen config

--- a/nextflow.config
+++ b/nextflow.config
@@ -78,12 +78,13 @@ includeConfig 'conf/base.config'
 
 profiles {
   local { process.executor = 'local' }
-  cbe { includeConfig 'conf/cbe.config' }
   singularity { singularity.enabled = true }
   podman { podman.enabled =  true }
   docker { docker.enabled = true }
   charliecloud { includeConfig 'conf/charliecloud.config' }
   testing { includeConfig 'conf/testing.config' }
+  cbe { includeConfig 'conf/cbe.config' }
+  biohpc_gen { includeConfig 'conf/biohpc_gen.config' }
 }
 
 if (params.METRICS) {
