simplify resource config

--- a/conf/base.config
+++ b/conf/base.config
@@ -8,70 +8,19 @@ env {
 }
 
 process {
-
-  withName: BUILD {
-  	cpus = 2
-  	memory = { 4.GB * task.attempt }
+  withLabel: resource_low {
+    cpus   = 1
+    memory = { 2.GB * task.attempt }
   }
 
-  withName: DEDUPLICATE {
-  	cpus = 2
-  	memory = { 4.GB * task.attempt }
+  withLabel: resource_medium {
+    cpus   = 2
+    memory = { 6.GB * task.attempt }
   }
 
-  withName: READ_STATISTICS {
-  	cpus = 1
-  	memory = {512.MB * task.attempt }
-  }
-
-  withName: SPLIT_BAM {
-  	cpus = 1
-  	memory = { 4.GB * task.attempt }
-  }
-
-  withName: SPLIT_BEDGRAPH {
-  	cpus = 1
-  	memory = { 2.GB * task.attempt }
-  }
-
-  withName: SPLIT_MATRIX {
-  	cpus = 1
-  	memory = { 2.GB * task.attempt }
-  }
-
-  withName: BUILD_INDEX {
-    cpus = 2
-  	memory = { 4.GB * task.attempt }
-  }
-
-  withName: CALL_MRS {
-  	cpus = 1
-  	memory = { 4.GB * task.attempt }
-  }
-
-  withName: IGV {
-  	cpus = 1
-  	memory = { 256.MB * task.attempt }
-  }
-
-  withName: MR_STATISTICS {
-  	cpus = 1
-  	memory = {512.MB * task.attempt }
-  }
-
-  withName: SPLIT_MRS {
-  	cpus = 1
-  	memory = { 4.GB * task.attempt }
-  }
-
-  withName: CALL_DMRS {
-  	cpus = 1
-  	memory = { 1.GB * task.attempt }
-  }
-
-  withName: MERGE_DMRS {
-  	cpus = 1
-  	memory = { 128.MB * task.attempt }
+  withLabel: resource_high {
+    cpus   = 4
+    memory = { 12.GB * task.attempt }
   }
 
   errorStrategy = { ( task.exitStatus == 143 || task.exitStatus == 137 ) ? 'retry' : 'finish' }
