--- a/conf/cbe.config
+++ b/conf/cbe.config
@@ -11,95 +11,25 @@ singularity {
 process {
   executor = 'slurm'
   queue = { task.memory <= 170.GB ? 'c' : 'm' }
-  clusterOptions = { task.time <= 8.h ? '--qos short': task.time <= 48.h ? '--qos medium' : '--qos long' }
+  clusterOptions = { '--signal B:USR2 ' << ( task.time <= 1.h ? '--qos rapid' : ( task.time <= 8.h ? '--qos short': ( task.time <= 48.h ? '--qos medium' : '--qos long' ) ) ) }
 
-  withName: BUILD {
-  	cpus = 2
-  	memory = { 4.GB * task.attempt }
-  	time = { 16.h * task.attempt }
+  withLabel: resource_low {
+    cpus   = { 2 * task.attempt }
+    memory = { 2.GB * task.attempt }
+    time   = { 1.h * task.attempt }
   }
 
-  withName: INDEX {
-  	cpus = 4
-  	memory = { 4.GB * task.attempt }
-  	time = { 8.h * task.attempt }
+  withLabel: resource_medium {
+	cpus   = { 2 * task.attempt }
+	memory = { 8.GB * task.attempt }
+	time   = { 8.h * task.attempt }
   }
 
-  withName: DEDUPLICATE {
-  	cpus = 1
-  	memory = { 16.GB * task.attempt }
-  	time = { 2.h * task.attempt }
+  withLabel: resource_high {
+	cpus   = { 2 * task.attempt }
+	memory = { 16.GB * task.attempt }
+	time   = { 16.h * task.attempt }
   }
 
-  withName: READ_STATISTICS {
-  	cpus = 1
-  	memory = {512.MB * task.attempt }
-  	time = { 1.h * task.attempt }
-  }
-  
-  withName: MR_STATISTICS {
-  	cpus = 1
-  	memory = {256.MB * task.attempt }
-  	time = { 1.h * task.attempt }
-  }
-
-  withName: SPLIT_BAM {
-  	cpus = 1
-  	memory = { 4.GB * task.attempt }
-  	time = { 1.h * task.attempt }
-  }
-
-  withName: SPLIT_BEDGRAPH {
-  	cpus = 1
-  	memory = { 1.GB * task.attempt }
-  	time = { 1.h * task.attempt }
-  }
-
-  withName: SPLIT_MATRIX {
-  	cpus = 1
-  	memory = { 1.GB * task.attempt }
-  	time = { 1.h * task.attempt }
-  }
-
-  withName: GENERATE {
-  	cpus = 1
-  	memory = { 128.MB * task.attempt }
-  	time = { 5.min * task.attempt }
-  }
-
-  withName: CALL_MRS {
-  	cpus = 1
-  	memory = { 8.GB * task.attempt }
-  	time = { 8.h * task.attempt }
-  }
-
-  withName: IGV {
-  	cpus = 1
-  	memory = { 256.MB * task.attempt }
-  	time = { 1.h * task.attempt }
-  }
-
-  withName: SPLIT_MRS {
-  	cpus = 1
-  	memory = { 8.GB * task.attempt }
-  	time = { 8.h * task.attempt }
-  }
-
-  withName: CALL_DMRS {
-  	cpus = 1
-        errorStrategy = 'retry'
-  	memory = { 6.GB * task.attempt }
-  	time = { 4.h * task.attempt }
-  }
-
-  withName: MERGE_DMRS {
-  	cpus = 1
-  	memory = { 512.MB * task.attempt }
-  	time = { 30.m * task.attempt }
-  }
-
-  errorStrategy = { ( task.exitStatus == 143 || task.exitStatus == 137 ) ? 'retry' : 'finish' }
-  //errorStrategy = 'retry'
-  maxRetries = 3
-  maxErrors = '-1'
+  errorStrategy = 'retry'
 }
