--- a/nextflow.config
+++ b/nextflow.config
@@ -81,7 +81,7 @@ profiles {
   singularity { singularity.enabled = true }
   podman { podman.enabled =  true }
   docker { docker.enabled = true }
-  charliecloud { includeConfig 'conf/charliecloud.config' }
+  charliecloud { charliecloud.enabled = true }
   testing { includeConfig 'conf/testing.config' }
   cbe { includeConfig 'conf/cbe.config' }
   biohpc_gen { includeConfig 'conf/biohpc_gen.config' }
