unbreak testing profile on GitHub Actions

--- a/conf/testing.config
+++ b/conf/testing.config
@@ -5,3 +5,20 @@
 
 params.SAMPLE_SHEET = 'https://github.com/Gregor-Mendel-Institute/test-data/raw/MethylScore/samplesheet.tsv'
 params.GENOME = 'https://github.com/Gregor-Mendel-Institute/test-data/raw/MethylScore/ref.fasta'
+
+process {
+  withLabel: resource_low {
+    cpus   = 1
+    memory = { 1.GB * task.attempt }
+  }
+
+  withLabel: resource_medium {
+    cpus   = 1
+    memory = { 3.GB * task.attempt }
+  }
+
+  withLabel: resource_high {
+    cpus   = 2
+    memory = { 6.GB * task.attempt }
+  }
+}
