--- a/nextflow.config
+++ b/nextflow.config
@@ -8,7 +8,7 @@
  * name here.
  */
 
-process.container = 'quay.io/beckerlab/methylscore:nextflow'
+process.container = 'quay.io/beckerlab/methylscore:dev'
 
 manifest {
     homePage = 'https://github.com/Computomics/MethylScore'
