Revert "use container test tag"
This reverts commit 84cd9122c1cb5840bda694aff79d5ce6d5fcd884.

--- a/nextflow.config
+++ b/nextflow.config
@@ -8,7 +8,7 @@
  * name here.
  */
 
-process.container = 'quay.io/beckerlab/methylscore:dev'
+process.container = 'quay.io/beckerlab/methylscore:nextflow'
 
 manifest {
     homePage = 'https://github.com/Computomics/MethylScore'
