--- a/nextflow.config
+++ b/nextflow.config
@@ -14,7 +14,7 @@ manifest {
     homePage = 'https://github.com/Computomics/MethylScore'
     description = "A nextflow implementation of Computomics' MethylScore pipeline"
     name = 'MethylScore'
-    version = '0.1.16-nf'
+    version = '0.2'
     mainScript = 'main.nf'
     defaultBranch = 'nextflow'
     nextflowVersion = '>=20.10.0'
