update container configuration

--- a/conf/base.config
+++ b/conf/base.config
@@ -8,6 +8,9 @@ env {
 }
 
 process {
+
+  container = { "quay.io/beckerlab/methylscore:${workflow.manifest.version}" }
+
   withLabel: resource_low {
     cpus   = 1
     memory = { 2.GB * task.attempt }
