--- a/nextflow.config
+++ b/nextflow.config
@@ -12,7 +12,7 @@ manifest {
     homePage = 'https://github.com/Computomics/MethylScore'
     description = "A nextflow implementation of Computomics' MethylScore pipeline"
     name = 'MethylScore'
-    version = '0.2'
+    version = 'dev'
     mainScript = 'main.nf'
     defaultBranch = 'nextflow'
     nextflowVersion = '>=20.10.0'
