set errorStrategy independent of exit code

--- a/conf/base.config
+++ b/conf/base.config
@@ -26,7 +26,7 @@ process {
     memory = { 12.GB * task.attempt }
   }
 
-  errorStrategy = { ( task.exitStatus == 143 || task.exitStatus == 137 ) ? 'retry' : 'finish' }
+  errorStrategy = 'retry'
   maxRetries = 3
   maxErrors = '-1'
 }
