--- a/nextflow.config
+++ b/nextflow.config
@@ -64,7 +64,7 @@ params {
   IGNORE_OB = "0,0,0,0"
 
   // MR parameters
-  MIN_COVERAGE = 1
+  MR_MIN_COV = 1
   MR_MIN_C = 20
   DESERT_SIZE = 100
   TRIM_METHRATE = 10
