increase default resource allocation

--- a/conf/base.config
+++ b/conf/base.config
@@ -13,20 +13,23 @@ process {
 
   withLabel: resource_low {
     cpus   = 1
-    memory = { 2.GB * task.attempt }
+    memory = { 6.GB * task.attempt }
+    time   = { 3.h * task.attempt  }
   }
 
   withLabel: resource_medium {
-    cpus   = 2
-    memory = { 6.GB * task.attempt }
+    cpus   = 4
+    memory = { 16.GB * task.attempt }
+    time   = { 6.h   * task.attempt }
   }
 
   withLabel: resource_high {
-    cpus   = 4
-    memory = { 12.GB * task.attempt }
+    cpus   = 1
+    memory = { 16.GB * task.attempt }
+    time   = {  8.h  * task.attempt }
   }
 
   errorStrategy = 'retry'
-  maxRetries = 3
-  maxErrors = '-1'
+  maxRetries    = 5
+  maxErrors     = -1
 }
